--- a/php/clase01/clase01-basic-request.html
+++ b/php/clase01/clase01-basic-request.html
@@ -3,18 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>formulario de login</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   </head>
   <body>
-    <form action="clase01-basic-request.php" method="get">
-      <input type="text" name="nombre" value="" placeholder="Nombre"><br/>
-      <input type="text" name="apellido" value="" placeholder="Apellido"><br/>
-      <select name="pais">
-        <option value="Argentina">Argentina</option>
-        <option value="US">US</option>
-        <option value="Brasil">Brasil</option>
-      </select><br/>
-      <hr>
-      <input type="submit" name="submit" value="Enviar!">
-    </form>
+    <div class="container">
+      <form action="clase01-basic-request.php" method="get">
+        <label for="nombre">Nombre</label>
+        <input type="text" name="nombre" value="Sony" readonly><br/>
+        <label for="nombre">Apellido</label>
+        <input type="text" name="apellido" value="Rubic" readonly><br/>
+        <label for="pais">País</label>
+        <select name="pais" disabled>
+          <option value="US">US</option>
+          <option value="Brasil">Brasil</option>
+          <option value="Argentina" selected>Argentina</option>
+        </select>
+        <input type="hidden" name="pais" value="Argentina"><br/>
+        <label for="email">E-mail</label>
+        <input type="email" name="email" value="sony@testmail.dev">
+        <hr>
+        <input type="submit" name="submit" value="Enviar!">
+      </form>
+    </div>
   </body>
 </html>
