--- a/01-request-basico/formulario.html
+++ b/01-request-basico/formulario.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <form action="clase01-basic-request.php" method="get">
+      <form action="respuesta.php" method="get">
         <label for="nombre">Nombre</label>
         <input type="text" name="nombre" value="Sony" readonly><br/>
         <label for="nombre">Apellido</label>
