--- a/01-request-basico/formulario.html
+++ b/01-request-basico/formulario.html
@@ -21,7 +21,7 @@
         </select>
         <input type="hidden" name="pais" value="Argentina"><br/>
         <label for="email">E-mail</label>
-        <input type="email" name="email" value="sony@testmail.dev">
+        <input type="email" name="email" value="sony@testmail.dev" readonly>
         <hr>
         <input type="submit" name="submit" value="Enviar!">
       </form>
